--- a/Part-Four-Salary-Analysis.ipynb
+++ b/Part-Four-Salary-Analysis.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "#### Methology\n",
     "1. Evaluate median salary for top 6 data jobs\n",
-    "2. Find median salary per skill for Data Analysts\n",
+    "2. Find median salary per skill for Machine Learning Engineers\n",
     "3. Visualize for highest paying skills and most demanded skills"
    ]
   },
